// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`#1649 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "meta": {
          "locale": true,
        },
        "name": "account-addresses",
        "path": "addresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/index.vue",
        "meta": {
          "locale": true,
        },
        "name": "account",
        "path": "",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "meta": {
          "locale": true,
        },
        "name": "account-profile",
        "path": "profile",
      },
    ],
    "file": "/path/to/1649/pages/account.vue",
    "meta": {
      "locale": true,
    },
    "path": "/account",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/account/addresses.vue",
    "meta": {
      "locale": true,
    },
    "name": "account-addresses___fr___locale",
    "path": "/:locale(fr)/compte/adresses",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/account/addresses.vue",
    "meta": {
      "locale": true,
    },
    "name": "account-addresses___locale",
    "path": "/:locale(fr)/compte/account/addresses",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/account/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "account___locale",
    "path": "/:locale(fr)/compte/account",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/account/profile.vue",
    "meta": {
      "locale": true,
    },
    "name": "account-profile___fr___locale",
    "path": "/:locale(fr)/compte/profil",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/account/profile.vue",
    "meta": {
      "locale": true,
    },
    "name": "account-profile___locale",
    "path": "/:locale(fr)/compte/account/profile",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "meta": {
          "locale": true,
        },
        "name": "account-addresses",
        "path": "addresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/index.vue",
        "meta": {
          "locale": true,
        },
        "name": "account",
        "path": "",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "meta": {
          "locale": true,
        },
        "name": "account-profile",
        "path": "profile",
      },
    ],
    "file": "/path/to/1649/pages/account.vue",
    "meta": {
      "locale": true,
    },
    "name": "undefined___locale___fr",
    "path": "/:locale(fr)/compte",
  },
  {
    "children": [
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "meta": {
          "locale": true,
        },
        "name": "account-addresses___locale___fr",
        "path": "/:locale(fr)/compte/adresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/addresses.vue",
        "meta": {
          "locale": true,
        },
        "name": "account-addresses___locale",
        "path": "/:locale(ja|fr)/account/addresses",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/index.vue",
        "meta": {
          "locale": true,
        },
        "name": "account___locale",
        "path": "/:locale(ja|fr)/account",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "meta": {
          "locale": true,
        },
        "name": "account-profile___locale___fr",
        "path": "/:locale(fr)/compte/profil",
      },
      {
        "children": [],
        "file": "/path/to/1649/pages/account/profile.vue",
        "meta": {
          "locale": true,
        },
        "name": "account-profile___locale",
        "path": "/:locale(ja|fr)/account/profile",
      },
    ],
    "file": "/path/to/1649/pages/account.vue",
    "meta": {
      "locale": true,
    },
    "path": "/:locale(ja|fr)/account",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "index",
    "path": "/",
  },
  {
    "children": [],
    "file": "/path/to/1649/pages/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "index___locale",
    "path": "/:locale(ja|fr)",
  },
]
`;

exports[`Module configuration > dynamic parameters 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
    "meta": {
      "locale": true,
    },
    "name": "blog-date-slug",
    "path": "/blog/:date/:slug",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
    "meta": {
      "locale": true,
    },
    "name": "blog-date-slug___locale___ja",
    "path": "/:locale(ja)/blog/tech/:date()/:slug()",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/blog/[date]/[slug].vue",
    "meta": {
      "locale": true,
    },
    "name": "blog-date-slug___locale",
    "path": "/:locale(ja|fr)/blog/:date/:slug",
  },
]
`;

exports[`Module configuration > simple 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "meta": {
      "locale": true,
    },
    "path": "/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "meta": {
      "locale": true,
    },
    "name": "undefined___en",
    "path": "/about-us",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "meta": {
      "locale": true,
    },
    "name": "undefined___locale___ja",
    "path": "/:locale(ja)/about-us",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "meta": {
      "locale": true,
    },
    "name": "undefined___locale___fr",
    "path": "/:locale(fr)/a-propos",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "meta": {
      "locale": true,
    },
    "path": "/:locale(ja|fr)/about",
  },
]
`;

exports[`Module configuration > the part of URL 1`] = `
[
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "meta": {
      "locale": true,
    },
    "path": "/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "meta": {
      "locale": true,
    },
    "name": "undefined___locale___fr",
    "path": "/:locale(fr)/a-propos",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/about.vue",
    "meta": {
      "locale": true,
    },
    "path": "/:locale(ja|fr)/about",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-coaching",
    "path": "/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-coaching___locale___fr",
    "path": "/:locale(fr)/offres/formation",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/coaching.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-coaching___locale",
    "path": "/:locale(ja|fr)/services/coaching",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development-app",
    "path": "/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development-app___locale___fr",
    "path": "/:locale(fr)/offres/developement/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/app.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development-app___locale",
    "path": "/:locale(ja|fr)/services/development/app",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development",
    "path": "/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development___locale___fr",
    "path": "/:locale(fr)/offres/developement",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development___locale",
    "path": "/:locale(ja|fr)/services/development",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development-website",
    "path": "/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development-website___locale___fr",
    "path": "/:locale(fr)/offres/developement/site-web",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/development/website.vue",
    "meta": {
      "locale": true,
    },
    "name": "services-development-website___locale",
    "path": "/:locale(ja|fr)/services/development/website",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "services",
    "path": "/services",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "services___locale___fr",
    "path": "/:locale(fr)/offres",
  },
  {
    "children": [],
    "file": "/path/to/nuxt-app/pages/services/index.vue",
    "meta": {
      "locale": true,
    },
    "name": "services___locale",
    "path": "/:locale(ja|fr)/services",
  },
]
`;

exports[`Page components > JavaScript 1`] = `
[
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "path": "/about",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "undefined___en",
    "path": "/about-us",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "undefined___locale___ja",
    "path": "/:locale(ja)/about-ja",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "undefined___locale___fr",
    "path": "/:locale(fr)/a-propos",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "path": "/:locale(ja|fr)/about",
  },
]
`;

exports[`Page components > dynamic route 1`] = `
[
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "articles-name",
    "path": "/articles/:name",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "articles-name___en",
    "path": "/articles/:name()",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "articles-name___locale___ja",
    "path": "/:locale(ja)/%E8%A8%98%E4%BA%8B/:name()",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "articles-name___locale___fr",
    "path": "/:locale(fr)/articles/:name()",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "articles-name___locale",
    "path": "/:locale(ja|fr)/articles/:name",
  },
]
`;

exports[`Page components > simple 1`] = `
[
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "path": "/about",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "undefined___en",
    "path": "/about-us",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "undefined___locale___ja",
    "path": "/:locale(ja)/about-ja",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "undefined___locale___fr",
    "path": "/:locale(fr)/a-propos",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "path": "/:locale(ja|fr)/about",
  },
]
`;

exports[`Page components > with definePageMeta 1`] = `
[
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "path": "/about",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "undefined___en",
    "path": "/about-us",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "undefined___locale___ja",
    "path": "/:locale(ja)/about-ja",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "name": "undefined___locale___fr",
    "path": "/:locale(fr)/a-propos",
  },
  {
    "children": [],
    "meta": {
      "locale": true,
    },
    "path": "/:locale(ja|fr)/about",
  },
]
`;
